logs/qcloudchameleon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/QCloudChameleon-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/antlr4'...
Listing './lib/python3.5/site-packages/antlr4/atn'...
Listing './lib/python3.5/site-packages/antlr4/dfa'...
Listing './lib/python3.5/site-packages/antlr4/error'...
Listing './lib/python3.5/site-packages/antlr4/tree'...
Listing './lib/python3.5/site-packages/antlr4/xpath'...
Listing './lib/python3.5/site-packages/antlr4_python2_runtime-4.7.1.egg-info'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/core'...
Listing './lib/python3.5/site-packages/chameleon/core/codegen'...
Listing './lib/python3.5/site-packages/chameleon/core/codegen/android'...
Listing './lib/python3.5/site-packages/chameleon/core/codegen/oc'...
Listing './lib/python3.5/site-packages/chameleon/core/config'...
Listing './lib/python3.5/site-packages/chameleon/core/engine'...
Listing './lib/python3.5/site-packages/chameleon/core/parser'...
Compiling './lib/python3.5/site-packages/chameleon/core/parser/listener.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/parser/listener.py", line 177
    print "*******"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chameleon/core/resources'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/android'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/android/model'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/android/request'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/bwmodel'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/dic'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/mantle'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/request'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/request-custom'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/service'...
Listing './lib/python3.5/site-packages/chameleon/core/resources/template/oc/service-custom'...
Listing './lib/python3.5/site-packages/chameleon/core/utilities'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
